--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo 3D em AR</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ar.js@3.3.2/aframe/build/aframe-ar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FBXLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/OBJLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/STLLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FBXLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/ar.js@3.3.2/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs>
@@ -18,47 +18,44 @@
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
+    
     <script>
-        const modelEntity = document.getElementById('model');
-        const loader = new THREE.GLTFLoader(); // Use the appropriate loader based on the file extension
+        AFRAME.registerComponent('load-model', {
+            schema: { type: 'string' },
+            init: function () {
+                const el = this.el;
+                const url = this.data;
+                const extension = url.split('.').pop().toLowerCase();
 
-        function loadModel(url) {
-            const extension = url.split('.').pop().toLowerCase();
-            switch (extension) {
-                case 'glb':
-                case 'gltf':
-                    loader.load(url, function (gltf) {
-                        modelEntity.setObject3D('mesh', gltf.scene);
-                    });
-                    break;
-                case 'obj':
-                    const objLoader = new THREE.OBJLoader();
-                    objLoader.load(url, function (obj) {
-                        modelEntity.setObject3D('mesh', obj);
-                    });
-                    break;
-                case 'stl':
-                    const stlLoader = new THREE.STLLoader();
-                    stlLoader.load(url, function (geometry) {
-                        const material = new THREE.MeshNormalMaterial();
-                        const mesh = new THREE.Mesh(geometry, material);
-                        modelEntity.setObject3D('mesh', mesh);
-                    });
-                    break;
-                case 'fbx':
-                    const fbxLoader = new THREE.FBXLoader();
-                    fbxLoader.load(url, function (fbx) {
-                        modelEntity.setObject3D('mesh', fbx);
-                    });
-                    break;
-                // Adicione outros loaders conforme necessário
-                default:
-                    console.error('Formato de arquivo não suportado: ' + extension);
+                if (extension === 'glb' || extension === 'gltf') {
+                    el.setAttribute('gltf-model', url);
+                } else {
+                    const loader = this.getLoader(extension);
+                    if (loader) {
+                        loader.load(url, function (object) {
+                            if (extension === 'stl') {
+                                const material = new THREE.MeshNormalMaterial();
+                                object = new THREE.Mesh(object, material);
+                            }
+                            el.setObject3D('mesh', object);
+                        });
+                    } else {
+                        console.error('Formato não suportado:', extension);
+                    }
+                }
+            },
+            getLoader: function (ext) {
+                switch (ext) {
+                    case 'fbx': return new THREE.FBXLoader();
+                    case 'obj': return new THREE.OBJLoader();
+                    case 'stl': return new THREE.STLLoader();
+                    default: return null;
+                }
             }
-        }
+        });
 
-        // Exemplo de uso: carregue o modelo desejado
-        loadModel('https://borbatay.github.io/teste-movel/movel1.fbx'); // Substitua pelo caminho do seu arquivo
+        // Teste com um arquivo FBX
+        document.getElementById('model').setAttribute('load-model', 'https://borbatay.github.io/teste-movel/movel1.fbx');
     </script>
 </body>
 </html>
